// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render asyncronously should render a HTML once resolved 1`] = `
Object {
  "index.html": "<html>
<body>
  Rendered with:&nbsp;
  <code>[
    {
      \\"route\\": \\"\\"
    }
  ]</code>
</body>
</html>",
}
`;

exports[`Render asyncronously should render a multiple files at once 1`] = `
Object {
  "pageA": Object {
    "index.html": "<html>
<body>
  Rendered with:&nbsp;
  <code>[
    {
      \\"route\\": \\"pageA\\"
    }
  ]</code>
</body>
</html>",
  },
  "pageB": Object {
    "index.html": "<html>
<body>
  Rendered with:&nbsp;
  <code>[
    {
      \\"route\\": \\"pageB\\"
    }
  ]</code>
</body>
</html>",
  },
  "pageC": Object {
    "index.html": "<html>
<body>
  Rendered with:&nbsp;
  <code>[
    {
      \\"route\\": \\"pageC\\"
    }
  ]</code>
</body>
</html>",
  },
}
`;
